--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
   <title>
   </title>
-  <link href="style.css" type="text/css" rel="stylesheet">
+  <link href=".resources/css/style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
   <h1>Discover hidden places in the world around you.</h1>
   <h4>Dowload excursion (Coming soon!)</h4>
+  <video src="resources/videos/excursion.mp4" controls></video>
   <h1>You personal travel guide</h1>
   <h2>Excusion remembers places you like, and recommends new points of interest to you</h2>
     <img src="resources/images/camp.jpg" alt="Tent at night">
+    <img src="resources/images/phone.png" alt="Phone icon">
 
 </body>
 </html>
