Add block level elements and color.

--- a/index.html
+++ b/index.html
@@ -3,16 +3,22 @@
 <head>
   <title>
   </title>
-  <link href=".resources/css/style.css" type="text/css" rel="stylesheet">
+  <link href="resources/css/style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-  <h1>Discover hidden places in the world around you.</h1>
-  <h4>Dowload excursion (Coming soon!)</h4>
+  <h1 class="main1">Discover hidden places in the world around you.</h1>
+  <h5>Dowload excursion (Coming soon!)</h5>
   <video src="resources/videos/excursion.mp4" controls></video>
-  <h1>You personal travel guide</h1>
-  <h2>Excusion remembers places you like, and recommends new points of interest to you</h2>
-    <img src="resources/images/camp.jpg" alt="Tent at night">
-    <img src="resources/images/phone.png" alt="Phone icon">
+  <h1 class="main2">Your personal travel guide</h1>
+  <h3>Excusion remembers places you like, and recommends new points of interest to you</h3>
+  <div>
+    <img src="resources/images/camp.jpg" alt="Tent at night"/>
+  </div>
+  <div>
+    <img src="resources/images/phone.png" alt="Phone icon"/>
+  </div>
+    <h5>Dowload excursion (Coming soon!)</h5>
+
 
 </body>
 </html>
