Add copyright and change font size.

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
   </div>
   <div>
     <img src="resources/images/phone.png" alt="Phone icon"/>
+    <br/>
   </div>
     <h5>Dowload excursion (Coming soon!)</h5>
-
+    <h2 class="copyright">&copy; Excursion</h2>
 
 </body>
 </html>
