--- a/index.html
+++ b/index.html
@@ -6,18 +6,22 @@
   <link href="resources/css/style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-  <h1 class="main1">Discover hidden places in the world around you.</h1>
+  <h1 class="main1">Discover hidden places in the world around you</h1>
   <h5>Dowload excursion (Coming soon!)</h5>
-  <video src="resources/videos/excursion.mp4" controls></video>
-  <h1 class="main2">Your personal travel guide</h1>
-  <h3>Excusion remembers places you like, and recommends new points of interest to you</h3>
+  <video autoplay loop>
+    <source src="resources/videos/excursion.mp4" type="video/mp4">
+      Your browser does not support the video
+  </video>
+  <p class="main2">Your personal travel guide</p>
+  <h3>Excusion remembers places you like, and recommends new points of interest to you.</h3>
   <div>
     <img src="resources/images/camp.jpg" alt="Tent at night"/>
   </div>
   <div>
-    <img src="resources/images/phone.png" alt="Phone icon"/>
     <br/>
+    <img src="resources/images/phone.png" alt="Phone icon"/>
   </div>
+  <p class=main2> Coming soon for iPhone and Android</p>
     <h5>Dowload excursion (Coming soon!)</h5>
     <h2 class="copyright">&copy; Excursion</h2>
 
